src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_MissingContentInIncludeTag.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
    <DockPanel.Resources>
        <Color x:Key="Green" A="255" G="128" />
    </DockPanel.Resources>
    <Button>
        <Button.Background>            
            <SolidColorBrush>
                <SolidColorBrush.Color>
                    <StaticResource />                    
                </SolidColorBrush.Color>
            </SolidColorBrush>
        </Button.Background>
    </Button>
</DockPanel>
</Page>
